WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
102997
HTML integer parsing functions don't natively handle 8 bit strings
https://bugs.webkit.org/show_bug.cgi?id=102997
Summary
HTML integer parsing functions don't natively handle 8 bit strings
Michael Saboff
Reported
2012-11-21 17:36:50 PST
The HTML integer parsing functions parseHTMLInteger() and parseHTMLNonNegativeInteger() both call characters() on the input string and process as a UChar*. For 8 bit strings, the integer parsing can be done directly without upconverting to 16 bits.
Attachments
Patch
(4.34 KB, patch)
2012-11-21 17:49 PST
,
Michael Saboff
no flags
Details
Formatted Diff
Diff
Patch with needed WTF exports
(6.22 KB, patch)
2012-11-21 17:55 PST
,
Michael Saboff
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Michael Saboff
Comment 1
2012-11-21 17:49:25 PST
Created
attachment 175556
[details]
Patch
Michael Saboff
Comment 2
2012-11-21 17:55:53 PST
Created
attachment 175557
[details]
Patch with needed WTF exports
WebKit Review Bot
Comment 3
2012-11-22 01:37:47 PST
Comment on
attachment 175557
[details]
Patch with needed WTF exports Clearing flags on attachment: 175557 Committed
r135495
: <
http://trac.webkit.org/changeset/135495
>
WebKit Review Bot
Comment 4
2012-11-22 01:37:51 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug