HTML integer parsing functions don't natively handle 8 bit strings https://bugs.webkit.org/show_bug.cgi?id=102997

Reviewed by Filip Pizlo.

Source/WebCore:

In order to avoid unnecessary up convering of 8 bit strings to 16 bits, added 8 bit paths to
parseHTMLInteger() and parseHTMLNonNegativeInteger() by breaking out the core logic into
templated helper functions.  These methods are primarily used to process attribute values.

No new tests needed, functionnality covered by existing tests.

* html/parser/HTMLParserIdioms.cpp:
(WebCore::parseHTMLIntegerInternal):
(WebCore::parseHTMLInteger):
(WebCore::parseHTMLNonNegativeIntegerInternal):
(WebCore::parseHTMLNonNegativeInteger):

Source/WTF:

Added exports to the LChar* versions of charactersToIntStrict() and charactersToUIntStrict()
to support the changes made to parseHTMLInteger() and parseHTMLNonNegativeInteger().

* wtf/text/WTFString.h:
(WTF::charactersToIntStrict): Added export
(WTF::charactersToUIntStrict): Added export


Canonical link: https://commits.webkit.org/121156@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@135495 268f45cc-cd09-0410-ab3c-d52691b4dbfc